src/objects/JiraAttributesProduktMapping__mdt.object
<CustomObject>
    <description>To Map the produckt paramter in the Jira form with the SF services</description>
    <fields>
        <fullName>Download_Speed_Code__c</fullName>
        <label>Download Speed Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Speed__c</fullName>
        <label>Download Speed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_with_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option with Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>JiraAttributesProduktMapping</label>
    <pluralLabel>JiraAttributesProduktMappings</pluralLabel>
</CustomObject>